<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Super Fun </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Open menu</string>
    <string name="action_back">Back</string>
    <string name="net_error">Network Error</string>
    <string name="error">Error</string>
    <string name="no_gifts">No gifts found.</string>
    <string name="no_fun_fare">No fun fare centers found.</string>
    <string name="no_purchase">No purchase history found.</string>
    <string name="log_out_msg">This number is registered in another device, please logout from it first</string>
    <string name="inactive_account">Your account is inactive now.</string>
    <string name="message">Message</string>
    <string name="num_same">Number is same as previous number</string>
    <string name="not_enough_tickets">You don\'t have enough ticket balance</string>
    <string name="not_enough_points">You don\'t have enough point balance</string>
    <string name="how_to">How to \nuse</string>
    <string name="mob_start_valid">Mobile number should be starts with 9,5 or 6</string>

    <!-- Login -->
    <string name="login_string">LOG IN</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="num_should_registered">Note: This number needs to be registered before A Verification Code will be sent to this number</string>
    <string name="mob_correct_text">Super fun will send SMS text message to your number,Is your phone number correct?</string>

    <!-- Sign up -->
    <string name="signup_string">SIGN UP</string>
    <string name="welcome_string">WEL-COME</string>
    <string name="sign_up">Continue</string>
    <string name="mob_num">Mobile Number</string>
    <string name="password_str">Password</string>
    <string name="confirm_password_str">Confirm Password</string>
    <string name="i_agree">I Agree on </string>
    <string name="terms">Terms of Service</string>
    <string name="privacy">Privacy Policy</string>
    <string name="show_page_both">Show this page to the Cashier</string>
    <string name="show_page_tickets">Show this page to the Cashier</string>
    <string name="show_page_points">Show this page to the Cashier</string>

    <!-- Home -->
    <string name="how_it_works">How it Works?</string>
    <string name="participating_comp">Participating Companies</string>
    <string name="change_lang">Change \nlanguage</string>
    <string name="dont_have">Don\'t Have an Account&#8230; Sign Up now</string>
    <string name="dont_have_new">Please click below for Sign In/Sign Up</string>

    <!-- Settings -->
    <string name="submit">Submit</string>
    <string name="submit_pin">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="choose_language">Choose language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="change">Change</string>
    <string name="log_out">Delete my account</string>
    <string name="log_out_new">Log Out</string>
    <string name="old_pwd">Old Password</string>
    <string name="new_pwd">New Password</string>
    <string name="confirm_pwd">Confirm New Password</string>

    <!-- Points collector -->

    <string name="mob_number">Mobile Number</string>
    <string name="total_tickets">Total Tickets</string>
    <string name="confirm_code">Verification Code</string>
    <string name="timer">Timer</string>
    <string name="seconds">Seconds</string>
    <string name="done">Done</string>

    <!-- Contact us -->
    <string name="hot_line">Hot Line</string>
    <string name="email">Email</string>
    <string name="website">Web Site</string>
    <string name="whats_app">WhatsApp</string>

    <!-- Mobile verification -->
    <string name="mob_verify">A Verification Code will be sent to this number</string>
    <string name="not_receive_sms">Didn\'t receive the SMS? &#8230; </string>
    <string name="send_again">Send Again</string>
    <string name="confirm">Confirm</string>
    <string name="sms_screen_name">SMS Code</string>

    <!-- Buy tickets -->
    <string name="buy_ticket_string">For Each 1$ you Pay \n You Get 3$ games &amp; 10 Gift Points</string>
    <string name="amount">Amount</string>
    <string name="buy_tab">Buy Tickets</string>
    <string name="buy">Buy</string>

    <!-- Tickets n Points -->
    <string name="total_points">Total Points</string>
    <string name="points">Points</string>
    <string name="worth">Worth</string>
    <string name="collect_tickets">Collect Tickets</string>
    <string name="collect_points">Collect Points</string>
    <string name="show_page">Show this page to the Cashier</string>

    <!-- Forgot password -->
    <string name="enter_mob">Please enter your Mobile Number</string>
    <string name="forgot_pass">Forgot Password</string>

    <!-- Tabs -->

    <string name="history_tab">Log Book</string>
    <string name="companies_tab">Collecting</string>

    <!-- Popup window -->
    <string name="settings_menu">SETTINGS</string>
    <string name="settings">Settings</string>
    <string name="gift_mennu">GIFTs LIST</string>
    <string name="gift_list">Gifts List</string>
    <string name="companies_menu">Fun Fair Centers</string>
    <string name="terms_menu">Terms &amp; Conditions</string>
    <string name="privacy_menu">Privacy Policy</string>
    <string name="contact_menu">CONTACT US</string>
    <string name="contact_us">Contact Us</string>
    <string name="points_n_tickets">Collecting Tickets &amp; Points</string>
    <string name="ticket_collector">Collecting Tickets</string>
    <string name="points_collector">Collecting Points</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="network_connection">Please check your network connection</string>
    <string name="invalid_username_pwd">Invalid username or password</string>
    <string name="login_successful">Login successfully</string>
    <string name="registration_successful">Registered successfully</string>
    <string name="verify_number">Please verify your mobile number</string>
    <string name="server_communication">Server communication failed</string>
    
    <string name="ticket_message">Tickets are already collected</string>
    <string name="point_message">Points are already collected</string>
      
    <string name="no_data">No data available</string>
    <string name="pass_not_sent">Password not sent.Please try again</string>
    <string name="msg_not_sent">Message not sent.Please send again.</string>
    <string name="number_registered">Number already registered</string>
    <string name="invalid_num">Invalid number</string>
    <string name="tickets_collected">Tickets collected: </string>
    <string name="branch_name">Branch name: </string>
    <string name="location_name">Location: </string>
    <string name="points_collected">Points collected: </string>
    <string name="Exit_Super_Fun_App">Are you sure you want to get out of the program?</string>
    <string name="delete_account_msg">Do you want to Log Out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ticekts_tab">Buy Games Tickets</string>
    <string name="Fun_Fair_Centers">Fun Fair \n Centers</string>
    <string name="fun_fair_comps">Fun Fair Centers</string>
    <string name="How_to_use_the_App">How to use the App?</string>
    <string name="Payment_Gateway">Payment Gateway</string>
    <string name="log_box">LOG BOOK</string>
    <string name="Collecting_Tickets_Points">Collecting Tickets and Points</string>
    <string name="ok">OK</string>
    <string name="account_deleted">Log out successfully.</string>
    <string name="price_kd">Price \n K.D.</string>
    <string name="Gifts_Points">Gifts \nPoints</string>
    <string name="Total_Tickets">Total \nTickets</string>
    <string name="Choose_one_of_the_offers_below">Choose one of the following offers</string>
    <string name="Fun_Park">Fun Park</string>
    <string name="Branches">Branches</string>
    <string name="Gifts_value_Points">Gift\'s value \n Points</string>
    <string name="Buy_Tickets">Buy Games Tickets</string>
    <string name="Number_is_Correct">Number is Correct</string>
    
    <string name="please_login_again">Please login again</string>
    <string name="alert">Alert</string>

</resources>