<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/header"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center"
        android:visibility="visible" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_pass"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/enter_mob"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/forgotMobEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/edit_box"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/mob_number"
            android:inputType="phone"
            android:padding="5dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sumbitForgotBtn"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/buy_button"
            android:padding="5dp"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size15"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>