<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:background="@drawable/popup_shape"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/settingsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center|right"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/settings"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line" />

        <TextView
            android:id="@+id/howItWorksBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center|right"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/How_to_use_the_App"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line" />

        <TextView
            android:id="@+id/participatingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center|right"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/fun_fair_comps"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line" />

        <TextView
            android:id="@+id/giftsListBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center|right"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/gift_list"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line" />

        <TextView
            android:id="@+id/termsBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center|right"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/terms_menu"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line" />

        <TextView
            android:id="@+id/privacyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center|right"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/privacy_menu"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line" />

        <TextView
            android:id="@+id/contactBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center|right"
            android:paddingBottom="12dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/contact_us"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size16"
            android:textStyle="bold" />

        <!--
            <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_line" />
        -->

    </LinearLayout>

</LinearLayout>