<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/header"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/signup_close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="7dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="40dp"
            android:padding="5dp"
            android:layout_weight="0.8"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/signupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/welcome_string"
                android:textColor="#F3EFB4"
                android:textSize="29sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/app_logo_new" />

            <EditText
                android:id="@+id/signupMobEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/et_box"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/mob_num"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size20"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/signupPwdEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_box"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password_str"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size20"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/signupConfirmEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_box"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/confirm_password_str"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size20"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/signUpVerify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/mob_verify"
                android:textColor="#635118"
                android:textSize="@dimen/text_size16"
                android:textStyle="bold" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/tab_selector"
                android:padding="5dp"
                android:shadowColor="#000000"
                android:shadowDx="2.5"
                android:shadowDy="2.5"
                android:shadowRadius="1.5"
                android:text="@string/done"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size15"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_agree"
                    android:textColor="#55430C"
                    android:textSize="@dimen/text_size14"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/termsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingLeft="2dp"
                    android:text="@string/terms"
                    android:textColor="#55430C"
                    android:textSize="@dimen/text_size14"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" &amp; "
                    android:textColor="#55430C"
                    android:textSize="@dimen/text_size14"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/privacyBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="@string/privacy"
                    android:textColor="#55430C"
                    android:textSize="@dimen/text_size14"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:background="@drawable/footer" />

</LinearLayout>