<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/header"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/login_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/close" />

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="@string/login_string"
            android:textColor="#F3EFB4"
            android:textSize="@dimen/text_size25"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/app_logo_new" />

            <EditText
                android:id="@+id/loginMobEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_box"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/mob_num"
                android:inputType="phone"
                android:maxLength="7"
                android:padding="5dp"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size20"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/loginPasswordEt"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/et_box"
                android:ems="5"
                android:gravity="center"
                android:hint="@string/password_str"
                android:inputType="textPassword"
                android:padding="5dp"
                android:textColor="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textSize="@dimen/text_size20"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/forgotBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/num_should_registered"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#55430C"
                android:textSize="@dimen/text_size15"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/tab_selector"
                android:padding="5dp"
                android:text="@string/log_in"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size16"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:background="@drawable/footer" />

</LinearLayout>